[gd_scene load_steps=4 format=3 uid="uid://b0g1jv5enke8y"]

[ext_resource type="Script" uid="uid://c84i0pi3xocxj" path="res://settings_menu.gd" id="1_0cmel"]
[ext_resource type="Texture2D" uid="uid://btkvtkmpr4vj4" path="res://assets/icons8-крестик-78.png" id="2_mlw3h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0eu6"]
bg_color = Color(0.243137, 0.827451, 0.6, 0.713726)

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource("1_0cmel")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d0eu6")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 34.0
offset_top = 144.0
offset_right = 269.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 30
text = "Музыка"
vertical_alignment = 1

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 31.0
offset_top = 262.0
offset_right = 321.0
offset_bottom = 394.0
theme_override_font_sizes/font_size = 30
text = "Звуки окружающего мира"
vertical_alignment = 1
autowrap_mode = 2

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 38.0
offset_top = 466.0
offset_right = 273.0
offset_bottom = 508.0
theme_override_font_sizes/font_size = 30
text = "SFX"
vertical_alignment = 1

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 460.0
offset_top = 39.0
offset_right = 695.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 30
text = "Настройте звук"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 324.0
offset_top = 135.0
offset_right = 1101.0
offset_bottom = 203.0
value = 1.0

[node name="AmbientSlider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 325.0
offset_top = 295.0
offset_right = 1099.0
offset_bottom = 366.0
value = 1.0

[node name="SFXSlider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 322.0
offset_top = 433.0
offset_right = 1102.0
offset_bottom = 542.0
value = 1.0

[node name="CloseButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 1053.0
offset_right = 1134.0
offset_bottom = 78.0
texture_normal = ExtResource("2_mlw3h")
flip_h = true

[connection signal="value_changed" from="Panel/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/AmbientSlider" to="." method="_on_ambient_slider_value_changed"]
[connection signal="value_changed" from="Panel/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
